fix: upgrade scrollbar appearence

--- a/apps/gauzy/src/app/@theme/styles/_overrides.scss
+++ b/apps/gauzy/src/app/@theme/styles/_overrides.scss
@@ -3,20 +3,20 @@
 
 /* Apply style on scrollbar for Firefox */
 * {
-  scrollbar-color: nb-theme(scrollbar-color) nb-theme(scrollbar-background-color);
+  scrollbar-color: rgba(50, 50, 50, 0.1) transparent;
   scrollbar-width: thin;
 }
 /*  Apply style on scrollbar for Chrome */
-::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: nb-theme(scrollbar-width);
 }
 
-::-webkit-scrollbar-track {
-  background: nb-theme(scrollbar-background-color);
+*::-webkit-scrollbar-track {
+  background: transparent;
 }
 
-::-webkit-scrollbar-thumb {
-  background: nb-theme(scrollbar-color);
+*::-webkit-scrollbar-thumb {
+  background: rgba(50, 50, 50, 0.1);
   border-radius: 1rem;
 }
 
@@ -147,11 +147,11 @@ body {
           width: nb-theme(scrollbar-width);
         }
         &::-webkit-scrollbar-track {
-          background: nb-theme(scrollbar-background-color);
+          background: transparent;
         }
         &::-webkit-scrollbar-thumb {
-          background: nb-theme(scrollbar-color);
-          border-radius: 0.15625rem;
+          background: rgba(50, 50, 50, 0.1);
+          border-radius: 1rem;
         }
       }
     }
@@ -164,11 +164,11 @@ body {
         width: nb-theme(scrollbar-width);
       }
       &::-webkit-scrollbar-track {
-        background: nb-theme(scrollbar-background-color);
+        background: transparent;
       }
       &::-webkit-scrollbar-thumb {
-        background: nb-theme(scrollbar-color);
-        border-radius: 0.15625rem;
+        background: rgba(50, 50, 50, 0.1);
+        border-radius: 1rem;
       }
     }
   }
